You are not prepared

--- a/default.htm
+++ b/default.htm
@@ -1,9 +1,22 @@
 <html>
-<head><title>Ninja Turtle Heaven Home Page</title></head>
+<head><title>STEEEEEEEEEN!!!</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+</head>
 
 <body>
-<h1>Welcome to the best web site</h1>
+<h1 class= "blinking" style="text-align: center;"><a href = "https://www.reddit.com/r/Steengifs/"> NECESSARY SORROWFUL BELLFROG </h1>
+<script>
+function blinker() {
+	$('.blinking').fadeOut(500);
+	$('.blinking').fadeIn(500);
+}
+setInterval(blinker, 1000);
+</script>
+<marquee style="font-size: 25px">The Steen Gif</marquee>
+<video controls autoplay loop>
+  <source src="https://fat.gfycat.com/NecessarySorrowfulBellfrog.webm" type="video/mp4" style:"height=35% width=80%">
+</video>
+
 </body>
 </html>
-
-
